crates/runie-tui/src/components/message_list/snapshots/runie_tui__components__message_list__snapshots__feed_multiple_tool_calls.snap
---
source: crates/runie-tui/src/components/message_list/snapshots.rs
expression: rendered
---
                                                                                
   ❯ Check my system                                                 4:38 AM    
                                                                                
                                                                                
                                                                                
   ◆ Thought for 0.1s                                                           
◆ bash uname -a                                                                 
◆ bash uptime                                                                   
   Your system is running well!
