crates/runie-tui/src/components/message_list/snapshots/runie_tui__components__message_list__snapshots__feed_single_user_hello.snap
---
source: crates/runie-tui/src/components/message_list/snapshots.rs
expression: rendered
---
  ❯ Hello
