crates/runie-tui/src/components/message_list/snapshots/runie_tui__components__message_list__snapshots__feed_system_notice.snap
---
source: crates/runie-tui/src/components/message_list/snapshots.rs
expression: rendered
---
                                                                                
 ❯ Hello                                                                        
                                                                                
                                                                                
 Hi!                                                                            
                                                                                
 • Using model: gpt-4o-mini
