crates/runie-tui/src/components/message_list/snapshots/runie_tui__components__message_list__snapshots__feed_thoughts_and_turn_timing.snap
---
source: crates/runie-tui/src/components/message_list/snapshots.rs
expression: rendered
---
  › Hey
