crates/runie-tui/src/components/message_list/snapshots/runie_tui__components__message_list__snapshots__feed_tool_call_bash.snap
---
source: crates/runie-tui/src/components/message_list/snapshots.rs
expression: rendered
---
  › Show me the files                                                           
  Here are the files in your directory:
