crates/runie-tui/src/components/message_list/snapshots/runie_tui__components__message_list__snapshots__feed_user_and_assistant_simple.snap
---
source: crates/runie-tui/src/components/message_list/snapshots.rs
expression: rendered
---
                                                                                
   ❯ Hello AI                                                        4:38 AM    
                                                                                
                                                                                
                                                                                
   Hello! How can I help you today?
