crates/runie-tui/src/components/message_list/snapshots/runie_tui__components__message_list__snapshots__feed_user_assistant_thoughts.snap
---
source: crates/runie-tui/src/components/message_list/snapshots.rs
expression: rendered
---
                                                                                
 ❯ Hello                                                                        
                                                                                
  ────────────────────────────────────────────────────────────────────────────  
 ◆ Thought for 0.2s                                                             
 Hey you too!
