crates/runie-tui/src/components/message_list/snapshots/runie_tui__components__message_list__snapshots__feed_user_hi_assistant_hello.snap
---
source: crates/runie-tui/src/components/message_list/snapshots.rs
expression: rendered
---
                                                                                
 ❯ Hi                                                                           
                                                                                
  ────────────────────────────────────────────────────────────────────────────  
 Hello!
